--- a/AppWMS/html/order.html
+++ b/AppWMS/html/order.html
@@ -55,7 +55,7 @@
         }
         #order_cont{
             overflow: scroll;
-            width: 100%;
+            width: 101%;
             height: 94%;
         }
 
@@ -70,9 +70,9 @@
             margin-left: 0.2rem;
             background: #FFFFFF;
             border-radius: 0.12rem;
-
             width: 99%;
             height: 100%;
+            overflow: hidden;
         }
 
         .main .main_part .part_order .part_order_table {
@@ -81,14 +81,14 @@
             padding-top: 0.27rem;
             /* background-color: #843534; */
 
-            width: 99%;
+            width: 100%;
             height: 100%;
 		}
 
         .part_order_table table {
             position: relative;
-            width: 100%;
-            height: 100%;
+            width: 98%;
+            height: 1rem;
             text-align: center;
             border-radius: 0.04rem;
             font-size: 0.2rem;
@@ -285,7 +285,8 @@
                 <div id="order_cont">
                     <table>
                         <!--Todo: table_1的内容-->
-                        <tbody id="table_1_cont"></tbody>
+                        <tbody id="table_1_cont">
+                        </tbody>
                     </table>
                 </div>
             </div>
