--- a/AppWMS/html/right_page.html
+++ b/AppWMS/html/right_page.html
@@ -324,22 +324,30 @@
         }
 
         /*特殊占用遮罩*/
-        .stock_area60:after {
-            content: '占用';
-            line-height: 1rem;
-            color: #fff;
-            font-weight: bold;
-            position: absolute;
-            background: #ccc;
-            z-index: 94;
-            left: 0;
-            right: 0;
-            width: 1rem;
-            height: 1rem;
-        }
+		.stock_area59:after,
+		.stock_area60:after {
+		    content: '占用';
+		    line-height: 1rem;
+		    color: #fff;
+		    font-weight: bold;
+		    position: absolute;
+		    background: #ccc;
+		    z-index: 94;
+		    left: 0;
+		    right: 0;
+		    width: 100%;
+		    height: 100%;
+		}
 
         #btnToFinishWhite{
-            margin-right:2.5%!important;
+            margin-right:4%!important;
+        }
+
+        /*下方按钮修改*/
+        .rl_li button {
+            width: 2rem;
+            height: 0.6rem;
+            font-size: 0.23rem;
         }
     </style>
 </head>
@@ -596,13 +604,13 @@
                 //title
                 for (var i = selectStart; i < selectEnd; i += (columnNum - 1)) {
                     if (i < 10 && (i + 5) < 10) {
-                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 5) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择0" + i + "-0" + (i + 5) + "</button></div>"
+                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 4) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择0" + i + "-0" + (i + 4) + "</button></div>"
                     }
                     else if (i < 10 && (i + 5) >= 10) {
-                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 5) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择0" + i + "-" + (i + 5) + "</button></div>"
+                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 4) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择0" + i + "-" + (i + 4) + "</button></div>"
                     }
                     else {
-                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 5) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择" + i + "-" + (i + 5) + "</button></div>"
+                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 4) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择" + i + "-" + (i + 4) + "</button></div>"
                     }
                 }
                 //cont
@@ -640,7 +648,7 @@
                 //右 菜单
                 //title
                 for (var i = selectStart; i < selectEnd; i += (columnNum - 1)) {
-                    title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 5) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择" + i + "-" + (i + 5) + "</button></div>"
+                    title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 4) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择" + i + "-" + (i + 4) + "</button></div>"
                 }
                 //cont
                 for (var i = columnStart; i < (columnEnd + 1); i++) {
@@ -710,7 +718,7 @@
             cont += "<ul>"
             for (var key in listObj) {
                 cont +=
-                    "<li"+" id=\"" + listObj[key]["id"]+"\""+">" +
+                    "<li "+ "class=\"rl_li\"" +" id=\"" + listObj[key]["id"]+"\""+">" +
                     "<button type=\"button\"" +
                     " class=\"" + listObj[key]["btn_change"] + " mui-btn mui-btn-blue\"" +
                     " changeName=\"" + listObj[key]["changeName"] + "\"" +
