--- a/AppWMS/unpackage/resources/H558290E6/www/html/left_page.html
+++ b/AppWMS/unpackage/resources/H558290E6/www/html/left_page.html
@@ -296,7 +296,7 @@
 
         .right_btn {
             position: absolute;
-            bottom: 5%;
+            bottom: 4%;
             left: 0;
             width: 100%;
         }
@@ -335,12 +335,19 @@
             z-index: 94;
             left: 0;
             right: 0;
-            width: 1rem;
-            height: 1rem;
+            width: 100%;
+            height: 100%;
         }
 
         #btnToNull,#btnToAllNull{
             margin-right:2.5%!important;
+        }
+
+        /*下方按钮修改*/
+        .rl_li button {
+            width: 2rem;
+            height: 0.6rem;
+            font-size: 0.23rem;
         }
     </style>
 </head>
@@ -536,24 +543,24 @@
                 "changeName": "毛坯蓝",
                 "actionName": "转为毛坯蓝"
             },
-            "转为配件A": {
-                "id": "btnToPartA",
-                "btn_change": "btn_change",
-                "changeName": "配件A",
-                "actionName": "转为配件A"
-            },
-            "转为配件B": {
-                "id": "btnToPartB",
-                "btn_change": "btn_change",
-                "changeName": "配件B",
-                "actionName": "转为配件B"
-            },
-            "转为配件C": {
-                "id": "btnToPartC",
-                "btn_change": "btn_change",
-                "changeName": "配件C",
-                "actionName": "转为配件C"
-            },
+            // "转为配件A": {
+            //     "id": "btnToPartA",
+            //     "btn_change": "btn_change",
+            //     "changeName": "配件A",
+            //     "actionName": "转为配件A"
+            // },
+            // "转为配件B": {
+            //     "id": "btnToPartB",
+            //     "btn_change": "btn_change",
+            //     "changeName": "配件B",
+            //     "actionName": "转为配件B"
+            // },
+            // "转为配件C": {
+            //     "id": "btnToPartC",
+            //     "btn_change": "btn_change",
+            //     "changeName": "配件C",
+            //     "actionName": "转为配件C"
+            // },
             "转为空托盘": {
                 "id": "btnToNull",
                 "btn_change": "btn_change",
@@ -566,18 +573,18 @@
                 "changeName": "无托盘",
                 "actionName": "转为无托盘"
             },
-            "转为成品白": {
-                "id": "btnToFinishWhite",
-                "btn_change": "btn_change",
-                "changeName": "成品白",
-                "actionName": "转为成品白"
-            },
-            "转为成品蓝": {
-                "id": "btnToFinishBlue",
-                "btn_change": "btn_change",
-                "changeName": "成品蓝",
-                "actionName": "转为成品蓝"
-            }
+            // "转为成品白": {
+            //     "id": "btnToFinishWhite",
+            //     "btn_change": "btn_change",
+            //     "changeName": "成品白",
+            //     "actionName": "转为成品白"
+            // },
+            // "转为成品蓝": {
+            //     "id": "btnToFinishBlue",
+            //     "btn_change": "btn_change",
+            //     "changeName": "成品蓝",
+            //     "actionName": "转为成品蓝"
+            // }
         },
         //两侧 菜单 【左/右】
         /***
@@ -597,13 +604,13 @@
                 //title
                 for (var i = selectStart; i < selectEnd; i += (columnNum - 1)) {
                     if (i < 10 && (i + 5) < 10) {
-                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 5) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择0" + i + "-0" + (i + 5) + "</button></div>"
+                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 4) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择0" + i + "-0" + (i + 4) + "</button></div>"
                     }
                     else if (i < 10 && (i + 5) >= 10) {
-                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 5) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择0" + i + "-" + (i + 5) + "</button></div>"
+                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 4) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择0" + i + "-" + (i + 4) + "</button></div>"
                     }
                     else {
-                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 5) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择" + i + "-" + (i + 5) + "</button></div>"
+                        title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 4) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择" + i + "-" + (i + 4) + "</button></div>"
                     }
                 }
                 //cont
@@ -641,7 +648,7 @@
                 //右 菜单
                 //title
                 for (var i = selectStart; i < selectEnd; i += (columnNum - 1)) {
-                    title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 5) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择" + i + "-" + (i + 5) + "</button></div>"
+                    title += "<div class=\"colNum\"><button minVal=\"" + i + "\" maxVal=\"" + (i + 4) + "\" class=\"mui-btn mui-btn-blue btn_select\" id=\"btnSelect0" + i + "\">选择" + i + "-" + (i + 4) + "</button></div>"
                 }
                 //cont
                 for (var i = columnStart; i < (columnEnd + 1); i++) {
@@ -711,7 +718,7 @@
             cont += "<ul>"
             for (var key in listObj) {
                 cont +=
-                    "<li"+" id=\"" + listObj[key]["id"]+"\""+">" +
+                    "<li "+ "class=\"rl_li\"" +" id=\"" + listObj[key]["id"]+"\""+">" +
                     "<button type=\"button\"" +
                     " class=\"" + listObj[key]["btn_change"] + " mui-btn mui-btn-blue\"" +
                     " changeName=\"" + listObj[key]["changeName"] + "\"" +
